--- a/cloudFrontEnd/src/app/multi-cam-view/multi-cam-view.component.html
+++ b/cloudFrontEnd/src/app/multi-cam-view/multi-cam-view.component.html
@@ -7,7 +7,7 @@
     <mat-icon>settings</mat-icon>
   </button>
     <div #streamSelectList
-         [style]="UtilsService.expandableStreamStyle(showStreamSelector, streamSelectList)"
+         [style]="UtilsService.expandableStreamStyle(showStreamSelector, streamSelectList, 200)"
          class="mat-elevation-z15">
       <div>
         <div>
